--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# anonymize ... for obvious reasons
+anonymizeData.r
+# ... and intermediate data files (products of prepareInp.r)
+/Data
+# and my output
+run*.txt
